// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter city should render correctly when city selected 1`] = `
<View
  backgroundColor="transparent"
  style={
    {
      "backgroundColor": "transparent",
      "flexBasis": 0,
      "flexGrow": 1,
      "flexShrink": 1,
      "minHeight": "100%",
      "minWidth": "100%",
    }
  }
>
  <View
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "white",
        "left": 0,
        "paddingHorizontal": 24,
        "paddingVertical": 8,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": 2,
      }
    }
  >
    <RCTSafeAreaView
      style={
        {
          "minHeight": 65,
          "paddingBottom": 20,
          "paddingTop": 0,
        }
      }
    >
      <View
        RTLBehaviour={false}
        animatedStyle={
          {
            "value": {},
          }
        }
        collapsable={false}
        horizontalAlign="space-between"
        style={
          {
            "alignItems": "center",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "space-between",
          }
        }
        verticalAlign="center"
      >
        <View
          style={
            {
              "flexBasis": "auto",
              "flexGrow": 0,
              "marginRight": 8,
            }
          }
        >
          <View>
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomLeftRadius": 12,
                  "borderBottomRightRadius": 12,
                  "borderTopLeftRadius": 12,
                  "borderTopRightRadius": 12,
                  "elevation": 6,
                  "opacity": 1,
                  "paddingBottom": 12,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "paddingTop": 12,
                  "shadowColor": "#212121",
                  "shadowOffset": {
                    "height": 1,
                    "width": 1,
                  },
                  "shadowOpacity": 0.16,
                  "shadowRadius": 8,
                  "width": 48,
                }
              }
            >
              <View
                disabled={false}
                style={{}}
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight="24"
                    bbWidth="24"
                    fill="#212121"
                    focusable={false}
                    height={24}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "flex": 0,
                          "height": 24,
                          "width": 24,
                        },
                      ]
                    }
                    vbHeight={24}
                    vbWidth={24}
                    width={24}
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4280361249,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGGroup
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                        >
                          <RNSVGRect
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            height="24"
                            matrix={
                              [
                                6.123233995736766e-17,
                                1,
                                -1,
                                6.123233995736766e-17,
                                24,
                                0,
                              ]
                            }
                            opacity={0}
                            width="24"
                            x="0"
                            y="0"
                          />
                          <RNSVGPath
                            d="M19 11H7.14l3.63-4.36a1 1 0 1 0-1.54-1.28l-5 6a1.19 1.19 0 0 0-.09.15c0 .05 0 .08-.07.13A1 1 0 0 0 4 12a1 1 0 0 0 .07.36c0 .05 0 .08.07.13a1.19 1.19 0 0 0 .09.15l5 6A1 1 0 0 0 10 19a1 1 0 0 0 .64-.23 1 1 0 0 0 .13-1.41L7.14 13H19a1 1 0 0 0 0-2z"
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "flexBasis": 0,
              "flexGrow": 1,
              "marginRight": 8,
            }
          }
        >
          <View
            RTLBehaviour={true}
            animatedStyle={
              {
                "value": {},
              }
            }
            collapsable={false}
            horizontalAlign="center"
            style={
              {
                "alignItems": "center",
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexGrow": 1,
                "justifyContent": "center",
              }
            }
            verticalAlign="center"
          >
            <View
              style={
                {
                  "flexBasis": "auto",
                  "flexGrow": 0,
                  "marginRight": 8,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight="24"
                  bbWidth="24"
                  fill="#212121"
                  focusable={false}
                  height={24}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      {
                        "flex": 0,
                        "height": 24,
                        "width": 24,
                      },
                    ]
                  }
                  vbHeight={24}
                  vbWidth={24}
                  width={24}
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4280361249,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                          height="24"
                          opacity={0}
                          width="24"
                          x="0"
                          y="0"
                        />
                        <RNSVGPath
                          d="M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                        />
                        <RNSVGPath
                          d="M12 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                        />
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
            <View
              style={
                {
                  "flexBasis": "auto",
                  "flexGrow": 0,
                }
              }
            >
              <Text
                accessibilityRole="header"
                ellipsizeMode="tail"
                invertedColor={false}
                isRTL={false}
                numberOfLines={2}
                selectable={true}
                style={
                  {
                    "color": "#212121",
                    "fontFamily": "circularBold",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Créer mon profil
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "flexBasis": "auto",
              "flexGrow": 0,
            }
          }
        >
          <View
            RTLBehaviour={false}
            animatedStyle={
              {
                "value": {},
              }
            }
            collapsable={false}
            horizontalAlign="flex-end"
            style={
              {
                "alignItems": "center",
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexGrow": 1,
                "justifyContent": "flex-end",
              }
            }
            verticalAlign="center"
          >
            <View
              style={
                {
                  "flexBasis": "auto",
                  "flexGrow": 0,
                }
              }
            >
              <View
                style={
                  {
                    "minWidth": 48,
                  }
                }
                width={48}
              />
            </View>
          </View>
        </View>
      </View>
    </RCTSafeAreaView>
    <Modal
      animationType="none"
      deviceHeight={null}
      deviceWidth={null}
      hardwareAccelerated={false}
      hideModalContentWhileAnimating={false}
      onBackdropPress={[Function]}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      onRequestClose={[Function]}
      panResponderThreshold={4}
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      statusBarTranslucent={false}
      supportedOrientations={
        [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
      transparent={true}
      visible={false}
    />
  </View>
  <RCTScrollView
    alwaysBounceVertical={false}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollEndDrag={[Function]}
    scrollEventThrottle={26}
    scrollIndicatorInsets={
      {
        "right": 1,
      }
    }
    style={
      [
        {
          "paddingBottom": 24,
        },
        {
          "flexGrow": 1,
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <View
          style={
            {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        backgroundColor="transparent"
        style={
          [
            {
              "backgroundColor": "transparent",
              "flexGrow": 1,
              "paddingHorizontal": 24,
              "paddingTop": 24,
            },
            {},
          ]
        }
      >
        <View
          style={
            {
              "flexBasis": "auto",
              "flexDirection": "column",
              "flexGrow": 1,
              "justifyContent": "flex-end",
            }
          }
          verticalAlign="flex-end"
        >
          <View
            style={
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "marginBottom": 16,
              }
            }
          >
            <View>
              <Text
                isRTL={false}
                selectable={true}
                style={
                  {
                    "color": "#212121",
                    "fontFamily": "circularBold",
                    "fontSize": 25,
                    "lineHeight": 32,
                    "marginBottom": 16,
                    "textAlign": "left",
                  }
                }
              >
                Tu habites dans quelle ville ?
              </Text>
              <Text
                isRTL={false}
                selectable={true}
                style={
                  {
                    "color": "#5E5E5E",
                    "fontFamily": "circularBook",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "marginBottom": 48,
                    "textAlign": "left",
                  }
                }
              >
                C’est pour te montrer les associations et les activités dans ta ville.
              </Text>
              <Text
                isRTL={false}
                selectable={true}
                style={
                  {
                    "color": "#212121",
                    "fontFamily": "circularBold",
                    "fontSize": 13,
                    "lineHeight": 16,
                    "marginBottom": 16,
                    "textAlign": "left",
                    "textTransform": "uppercase",
                  }
                }
              >
                Ta ville
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "backgroundColor": "#212121",
                      "borderBottomLeftRadius": 12,
                      "borderBottomRightRadius": 12,
                      "borderTopLeftRadius": 12,
                      "borderTopRightRadius": 12,
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 32,
                      "opacity": 1,
                      "paddingBottom": 16,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "paddingTop": 16,
                    }
                  }
                >
                  <Text
                    isRTL={false}
                    selectable={true}
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "circularBold",
                        "fontSize": 16,
                        "lineHeight": 20,
                        "marginLeft": 0,
                        "marginRight": 8,
                        "textAlign": "left",
                      }
                    }
                  >
                    city (dep)
                  </Text>
                  <View
                    collapsable={false}
                    style={
                      {
                        "transform": [
                          {
                            "scale": 1,
                          },
                        ],
                      }
                    }
                  >
                    <RNSVGSvgView
                      align="xMidYMid"
                      bbHeight="24"
                      bbWidth="24"
                      fill="#FFFFFF"
                      focusable={false}
                      height={24}
                      meetOrSlice={0}
                      minX={0}
                      minY={0}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 24,
                            "width": 24,
                          },
                        ]
                      }
                      vbHeight={24}
                      vbWidth={24}
                      width={24}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4294967295,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      >
                        <RNSVGGroup
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                          >
                            <RNSVGRect
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                              height="24"
                              matrix={
                                [
                                  -1,
                                  1.2246467991473532e-16,
                                  -1.2246467991473532e-16,
                                  -1,
                                  24,
                                  24,
                                ]
                              }
                              opacity={0}
                              width="24"
                              x="0"
                              y="0"
                            />
                            <RNSVGPath
                              d="M13.41 12l4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "flexBasis": "auto",
                "flexGrow": 0,
              }
            }
          >
            <View>
              <View
                style={
                  {
                    "flexDirection": "row",
                    "marginHorizontal": -6,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#C6C6C6",
                      "borderBottomLeftRadius": 12,
                      "borderBottomRightRadius": 12,
                      "borderTopLeftRadius": 12,
                      "borderTopRightRadius": 12,
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "height": 4,
                      "marginHorizontal": 6,
                      "overflow": "hidden",
                      "width": "100%",
                    }
                  }
                >
                  <View
                    animatedStyle={
                      {
                        "value": {
                          "width": "0%",
                        },
                      }
                    }
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "#0421B1",
                        "height": "100%",
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "0%",
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "backgroundColor": "#C6C6C6",
                      "borderBottomLeftRadius": 12,
                      "borderBottomRightRadius": 12,
                      "borderTopLeftRadius": 12,
                      "borderTopRightRadius": 12,
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "height": 4,
                      "marginHorizontal": 6,
                      "overflow": "hidden",
                      "width": "100%",
                    }
                  }
                >
                  <View
                    animatedStyle={
                      {
                        "value": {},
                      }
                    }
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "#0421B1",
                        "height": "100%",
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": 0,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "backgroundColor": "#C6C6C6",
                      "borderBottomLeftRadius": 12,
                      "borderBottomRightRadius": 12,
                      "borderTopLeftRadius": 12,
                      "borderTopRightRadius": 12,
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "height": 4,
                      "marginHorizontal": 6,
                      "overflow": "hidden",
                      "width": "100%",
                    }
                  }
                >
                  <View
                    animatedStyle={
                      {
                        "value": {},
                      }
                    }
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "#0421B1",
                        "height": "100%",
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": 0,
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "marginBottom": 24,
                    "marginTop": 24,
                  }
                }
              >
                <View
                  RTLBehaviour={false}
                  animatedStyle={
                    {
                      "value": {},
                    }
                  }
                  collapsable={false}
                  horizontalAlign="flex-start"
                  style={
                    {
                      "alignItems": "flex-start",
                      "flexBasis": "auto",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "justifyContent": "flex-start",
                    }
                  }
                  verticalAlign="flex-start"
                >
                  <View
                    style={
                      {
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "marginRight": 8,
                      }
                    }
                  >
                    <View
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": undefined,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 12,
                          "borderBottomRightRadius": 12,
                          "borderTopLeftRadius": 12,
                          "borderTopRightRadius": 12,
                          "display": "flex",
                          "flexDirection": "row",
                          "minHeight": 56,
                          "opacity": 1,
                          "paddingVertical": 18,
                        }
                      }
                    >
                      <Text
                        isRTL={false}
                        selectable={true}
                        style={
                          [
                            {
                              "color": "#212121",
                              "fontFamily": "circularBold",
                              "fontSize": 16,
                              "lineHeight": 20,
                              "textAlign": "left",
                            },
                            {
                              "color": "#0421B1",
                            },
                          ]
                        }
                      >
                        Passer l'étape
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      {
                        "flexBasis": 0,
                        "flexGrow": 1,
                      }
                    }
                  >
                    <View
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": false,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "backgroundColor": "#0421B1",
                          "borderBottomLeftRadius": 12,
                          "borderBottomRightRadius": 12,
                          "borderTopLeftRadius": 12,
                          "borderTopRightRadius": 12,
                          "display": "flex",
                          "elevation": 2,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "minHeight": 56,
                          "opacity": 0.4,
                          "shadowColor": "#212121",
                          "shadowOffset": {
                            "height": 1,
                            "width": 1,
                          },
                          "shadowOpacity": 0.4,
                          "shadowRadius": 2,
                        }
                      }
                      testID="test-validate-button"
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight="24"
                          bbWidth="24"
                          fill="#FFFFFF"
                          focusable={false}
                          height={24}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "flex": 0,
                                "height": 24,
                                "width": 24,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={24}
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4294967295,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "fill",
                              ]
                            }
                          >
                            <RNSVGGroup
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            >
                              <RNSVGGroup
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                              >
                                <RNSVGRect
                                  fill={
                                    {
                                      "payload": 4278190080,
                                      "type": 0,
                                    }
                                  }
                                  height="24"
                                  opacity={0}
                                  width="24"
                                  x="0"
                                  y="0"
                                />
                                <RNSVGPath
                                  d="M9.86 18a1 1 0 0 1-.73-.32l-4.86-5.17a1 1 0 1 1 1.46-1.37l4.12 4.39 8.41-9.2a1 1 0 1 1 1.48 1.34l-9.14 10a1 1 0 0 1-.73.33z"
                                  fill={
                                    {
                                      "payload": 4278190080,
                                      "type": 0,
                                    }
                                  }
                                />
                              </RNSVGGroup>
                            </RNSVGGroup>
                          </RNSVGGroup>
                        </RNSVGSvgView>
                      </View>
                      <Text
                        color="#FFFFFF"
                        isRTL={false}
                        selectable={true}
                        style={
                          {
                            "alignItems": "center",
                            "color": "#FFFFFF",
                            "fontFamily": "circularBold",
                            "fontSize": 16,
                            "lineHeight": 20,
                            "marginLeft": 8,
                            "marginRight": 0,
                            "textAlign": "left",
                          }
                        }
                      >
                        Valider
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Filter city should render correctly when no city 1`] = `
<View
  backgroundColor="transparent"
  style={
    {
      "backgroundColor": "transparent",
      "flexBasis": 0,
      "flexGrow": 1,
      "flexShrink": 1,
      "minHeight": "100%",
      "minWidth": "100%",
    }
  }
>
  <View
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "white",
        "left": 0,
        "paddingHorizontal": 24,
        "paddingVertical": 8,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": 2,
      }
    }
  >
    <RCTSafeAreaView
      style={
        {
          "minHeight": 65,
          "paddingBottom": 20,
          "paddingTop": 0,
        }
      }
    >
      <View
        RTLBehaviour={false}
        animatedStyle={
          {
            "value": {},
          }
        }
        collapsable={false}
        horizontalAlign="space-between"
        style={
          {
            "alignItems": "center",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "space-between",
          }
        }
        verticalAlign="center"
      >
        <View
          style={
            {
              "flexBasis": "auto",
              "flexGrow": 0,
              "marginRight": 8,
            }
          }
        >
          <View>
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomLeftRadius": 12,
                  "borderBottomRightRadius": 12,
                  "borderTopLeftRadius": 12,
                  "borderTopRightRadius": 12,
                  "elevation": 6,
                  "opacity": 1,
                  "paddingBottom": 12,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "paddingTop": 12,
                  "shadowColor": "#212121",
                  "shadowOffset": {
                    "height": 1,
                    "width": 1,
                  },
                  "shadowOpacity": 0.16,
                  "shadowRadius": 8,
                  "width": 48,
                }
              }
            >
              <View
                disabled={false}
                style={{}}
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight="24"
                    bbWidth="24"
                    fill="#212121"
                    focusable={false}
                    height={24}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "flex": 0,
                          "height": 24,
                          "width": 24,
                        },
                      ]
                    }
                    vbHeight={24}
                    vbWidth={24}
                    width={24}
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4280361249,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGGroup
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                        >
                          <RNSVGRect
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            height="24"
                            matrix={
                              [
                                6.123233995736766e-17,
                                1,
                                -1,
                                6.123233995736766e-17,
                                24,
                                0,
                              ]
                            }
                            opacity={0}
                            width="24"
                            x="0"
                            y="0"
                          />
                          <RNSVGPath
                            d="M19 11H7.14l3.63-4.36a1 1 0 1 0-1.54-1.28l-5 6a1.19 1.19 0 0 0-.09.15c0 .05 0 .08-.07.13A1 1 0 0 0 4 12a1 1 0 0 0 .07.36c0 .05 0 .08.07.13a1.19 1.19 0 0 0 .09.15l5 6A1 1 0 0 0 10 19a1 1 0 0 0 .64-.23 1 1 0 0 0 .13-1.41L7.14 13H19a1 1 0 0 0 0-2z"
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "flexBasis": 0,
              "flexGrow": 1,
              "marginRight": 8,
            }
          }
        >
          <View
            RTLBehaviour={true}
            animatedStyle={
              {
                "value": {},
              }
            }
            collapsable={false}
            horizontalAlign="center"
            style={
              {
                "alignItems": "center",
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexGrow": 1,
                "justifyContent": "center",
              }
            }
            verticalAlign="center"
          >
            <View
              style={
                {
                  "flexBasis": "auto",
                  "flexGrow": 0,
                  "marginRight": 8,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight="24"
                  bbWidth="24"
                  fill="#212121"
                  focusable={false}
                  height={24}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      {
                        "flex": 0,
                        "height": 24,
                        "width": 24,
                      },
                    ]
                  }
                  vbHeight={24}
                  vbWidth={24}
                  width={24}
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4280361249,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                          height="24"
                          opacity={0}
                          width="24"
                          x="0"
                          y="0"
                        />
                        <RNSVGPath
                          d="M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                        />
                        <RNSVGPath
                          d="M12 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                        />
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
            <View
              style={
                {
                  "flexBasis": "auto",
                  "flexGrow": 0,
                }
              }
            >
              <Text
                accessibilityRole="header"
                ellipsizeMode="tail"
                invertedColor={false}
                isRTL={false}
                numberOfLines={2}
                selectable={true}
                style={
                  {
                    "color": "#212121",
                    "fontFamily": "circularBold",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Créer mon profil
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "flexBasis": "auto",
              "flexGrow": 0,
            }
          }
        >
          <View
            RTLBehaviour={false}
            animatedStyle={
              {
                "value": {},
              }
            }
            collapsable={false}
            horizontalAlign="flex-end"
            style={
              {
                "alignItems": "center",
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexGrow": 1,
                "justifyContent": "flex-end",
              }
            }
            verticalAlign="center"
          >
            <View
              style={
                {
                  "flexBasis": "auto",
                  "flexGrow": 0,
                }
              }
            >
              <View
                style={
                  {
                    "minWidth": 48,
                  }
                }
                width={48}
              />
            </View>
          </View>
        </View>
      </View>
    </RCTSafeAreaView>
    <Modal
      animationType="none"
      deviceHeight={null}
      deviceWidth={null}
      hardwareAccelerated={false}
      hideModalContentWhileAnimating={false}
      onBackdropPress={[Function]}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      onRequestClose={[Function]}
      panResponderThreshold={4}
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      statusBarTranslucent={false}
      supportedOrientations={
        [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
      transparent={true}
      visible={false}
    />
  </View>
  <RCTScrollView
    alwaysBounceVertical={false}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollEndDrag={[Function]}
    scrollEventThrottle={26}
    scrollIndicatorInsets={
      {
        "right": 1,
      }
    }
    style={
      [
        {
          "paddingBottom": 24,
        },
        {
          "flexGrow": 1,
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <View
          style={
            {
              "bottom": 0,
              "left": 0,
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        backgroundColor="transparent"
        style={
          [
            {
              "backgroundColor": "transparent",
              "flexGrow": 1,
              "paddingHorizontal": 24,
              "paddingTop": 24,
            },
            {},
          ]
        }
      >
        <View
          style={
            {
              "flexBasis": "auto",
              "flexDirection": "column",
              "flexGrow": 1,
              "justifyContent": "flex-end",
            }
          }
          verticalAlign="flex-end"
        >
          <View
            style={
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "marginBottom": 16,
              }
            }
          >
            <View>
              <Text
                isRTL={false}
                selectable={true}
                style={
                  {
                    "color": "#212121",
                    "fontFamily": "circularBold",
                    "fontSize": 25,
                    "lineHeight": 32,
                    "marginBottom": 16,
                    "textAlign": "left",
                  }
                }
              >
                Tu habites dans quelle ville ?
              </Text>
              <Text
                isRTL={false}
                selectable={true}
                style={
                  {
                    "color": "#5E5E5E",
                    "fontFamily": "circularBook",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "marginBottom": 48,
                    "textAlign": "left",
                  }
                }
              >
                C’est pour te montrer les associations et les activités dans ta ville.
              </Text>
              <Text
                isRTL={false}
                selectable={true}
                style={
                  {
                    "color": "#212121",
                    "fontFamily": "circularBold",
                    "fontSize": 13,
                    "lineHeight": 16,
                    "marginBottom": 16,
                    "textAlign": "left",
                    "textTransform": "uppercase",
                  }
                }
              >
                Ta ville
              </Text>
              <View>
                <View>
                  <View
                    accessibilityLabel="Ta ville"
                    accessibilityRole="button"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderBottomLeftRadius": 12,
                        "borderBottomRightRadius": 12,
                        "borderColor": "#5E5E5E",
                        "borderStyle": "solid",
                        "borderTopLeftRadius": 12,
                        "borderTopRightRadius": 12,
                        "borderWidth": 1,
                        "display": "flex",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "minHeight": 56,
                        "opacity": 1,
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "transform": [
                            {
                              "scale": 1,
                            },
                          ],
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight="24"
                        bbWidth="24"
                        fill="#5E5E5E"
                        focusable={false}
                        height={24}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          [
                            {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            {
                              "flex": 0,
                              "height": 24,
                              "width": 24,
                            },
                          ]
                        }
                        vbHeight={24}
                        vbWidth={24}
                        width={24}
                      >
                        <RNSVGGroup
                          fill={
                            {
                              "payload": 4284374622,
                              "type": 0,
                            }
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                          >
                            <RNSVGGroup
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            >
                              <RNSVGRect
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                                height="24"
                                opacity={0}
                                width="24"
                                x="0"
                                y="0"
                              />
                              <RNSVGPath
                                d="M20.71 19.29l-3.4-3.39A7.92 7.92 0 0 0 19 11a8 8 0 1 0-8 8 7.92 7.92 0 0 0 4.9-1.69l3.39 3.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 11a6 6 0 1 1 6 6 6 6 0 0 1-6-6z"
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                              />
                            </RNSVGGroup>
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                    <Text
                      isRTL={false}
                      style={
                        {
                          "color": "#5E5E5E",
                          "marginLeft": 8,
                          "marginRight": 0,
                        }
                      }
                    >
                      Exemple : Paris
                    </Text>
                  </View>
                  <Modal
                    animationType="none"
                    deviceHeight={null}
                    deviceWidth={null}
                    hardwareAccelerated={false}
                    hideModalContentWhileAnimating={false}
                    onBackdropPress={[Function]}
                    onModalHide={[Function]}
                    onModalWillHide={[Function]}
                    onModalWillShow={[Function]}
                    onRequestClose={[Function]}
                    panResponderThreshold={4}
                    scrollHorizontal={false}
                    scrollOffset={0}
                    scrollOffsetMax={0}
                    scrollTo={null}
                    statusBarTranslucent={true}
                    supportedOrientations={
                      [
                        "portrait",
                        "landscape",
                      ]
                    }
                    swipeThreshold={100}
                    transparent={true}
                    visible={false}
                  />
                </View>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#DAE0FB",
                      "borderBottomLeftRadius": 12,
                      "borderBottomRightRadius": 12,
                      "borderColor": "#DAE0FB",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 12,
                      "borderTopRightRadius": 12,
                      "borderWidth": 2,
                      "display": "flex",
                      "elevation": 2,
                      "flexDirection": "row",
                      "marginVertical": 16,
                      "opacity": 1,
                      "paddingBottom": 14,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 14,
                      "shadowColor": "#212121",
                      "shadowOffset": {
                        "height": 1,
                        "width": 1,
                      },
                      "shadowOpacity": 0.4,
                      "shadowRadius": 2,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "transform": [
                          {
                            "scale": 1,
                          },
                        ],
                      }
                    }
                  >
                    <RNSVGSvgView
                      align="xMidYMid"
                      bbHeight="24"
                      bbWidth="24"
                      fill="#0421B1"
                      focusable={false}
                      height={24}
                      meetOrSlice={0}
                      minX={0}
                      minY={0}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 24,
                            "width": 24,
                          },
                        ]
                      }
                      vbHeight={24}
                      vbWidth={24}
                      width={24}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278460849,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      >
                        <RNSVGGroup
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                          >
                            <RNSVGRect
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                              height="24"
                              opacity={0}
                              width="24"
                              x="0"
                              y="0"
                            />
                            <RNSVGCircle
                              cx="12"
                              cy="9.5"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                              r="1.5"
                            />
                            <RNSVGPath
                              d="M12 2a8 8 0 0 0-8 7.92c0 5.48 7.05 11.58 7.35 11.84a1 1 0 0 0 1.3 0C13 21.5 20 15.4 20 9.92A8 8 0 0 0 12 2zm0 11a3.5 3.5 0 1 1 3.5-3.5A3.5 3.5 0 0 1 12 13z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                  <Text
                    isRTL={false}
                    selectable={true}
                    style={
                      {
                        "color": "#0421B1",
                        "fontFamily": "circularBold",
                        "fontSize": 16,
                        "lineHeight": 20,
                        "marginLeft": 8,
                        "marginRight": 0,
                        "textAlign": "left",
                      }
                    }
                  >
                    Utiliser ma position
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "flexBasis": "auto",
                "flexGrow": 0,
              }
            }
          >
            <View>
              <View
                style={
                  {
                    "flexDirection": "row",
                    "marginHorizontal": -6,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#C6C6C6",
                      "borderBottomLeftRadius": 12,
                      "borderBottomRightRadius": 12,
                      "borderTopLeftRadius": 12,
                      "borderTopRightRadius": 12,
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "height": 4,
                      "marginHorizontal": 6,
                      "overflow": "hidden",
                      "width": "100%",
                    }
                  }
                >
                  <View
                    animatedStyle={
                      {
                        "value": {
                          "width": "0%",
                        },
                      }
                    }
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "#0421B1",
                        "height": "100%",
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "0%",
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "backgroundColor": "#C6C6C6",
                      "borderBottomLeftRadius": 12,
                      "borderBottomRightRadius": 12,
                      "borderTopLeftRadius": 12,
                      "borderTopRightRadius": 12,
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "height": 4,
                      "marginHorizontal": 6,
                      "overflow": "hidden",
                      "width": "100%",
                    }
                  }
                >
                  <View
                    animatedStyle={
                      {
                        "value": {},
                      }
                    }
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "#0421B1",
                        "height": "100%",
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": 0,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "backgroundColor": "#C6C6C6",
                      "borderBottomLeftRadius": 12,
                      "borderBottomRightRadius": 12,
                      "borderTopLeftRadius": 12,
                      "borderTopRightRadius": 12,
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "height": 4,
                      "marginHorizontal": 6,
                      "overflow": "hidden",
                      "width": "100%",
                    }
                  }
                >
                  <View
                    animatedStyle={
                      {
                        "value": {},
                      }
                    }
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "#0421B1",
                        "height": "100%",
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": 0,
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "marginBottom": 24,
                    "marginTop": 24,
                  }
                }
              >
                <View
                  RTLBehaviour={false}
                  animatedStyle={
                    {
                      "value": {},
                    }
                  }
                  collapsable={false}
                  horizontalAlign="flex-start"
                  style={
                    {
                      "alignItems": "flex-start",
                      "flexBasis": "auto",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "justifyContent": "flex-start",
                    }
                  }
                  verticalAlign="flex-start"
                >
                  <View
                    style={
                      {
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "marginRight": 8,
                      }
                    }
                  >
                    <View
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": undefined,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 12,
                          "borderBottomRightRadius": 12,
                          "borderTopLeftRadius": 12,
                          "borderTopRightRadius": 12,
                          "display": "flex",
                          "flexDirection": "row",
                          "minHeight": 56,
                          "opacity": 1,
                          "paddingVertical": 18,
                        }
                      }
                    >
                      <Text
                        isRTL={false}
                        selectable={true}
                        style={
                          [
                            {
                              "color": "#212121",
                              "fontFamily": "circularBold",
                              "fontSize": 16,
                              "lineHeight": 20,
                              "textAlign": "left",
                            },
                            {
                              "color": "#0421B1",
                            },
                          ]
                        }
                      >
                        Passer l'étape
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      {
                        "flexBasis": 0,
                        "flexGrow": 1,
                      }
                    }
                  >
                    <View
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": true,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "backgroundColor": "#0421B1",
                          "borderBottomLeftRadius": 12,
                          "borderBottomRightRadius": 12,
                          "borderTopLeftRadius": 12,
                          "borderTopRightRadius": 12,
                          "display": "flex",
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "minHeight": 56,
                          "opacity": 0.4,
                        }
                      }
                      testID="test-validate-button"
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight="24"
                          bbWidth="24"
                          fill="#FFFFFF"
                          focusable={false}
                          height={24}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "flex": 0,
                                "height": 24,
                                "width": 24,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={24}
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4294967295,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "fill",
                              ]
                            }
                          >
                            <RNSVGGroup
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            >
                              <RNSVGGroup
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                              >
                                <RNSVGRect
                                  fill={
                                    {
                                      "payload": 4278190080,
                                      "type": 0,
                                    }
                                  }
                                  height="24"
                                  opacity={0}
                                  width="24"
                                  x="0"
                                  y="0"
                                />
                                <RNSVGPath
                                  d="M9.86 18a1 1 0 0 1-.73-.32l-4.86-5.17a1 1 0 1 1 1.46-1.37l4.12 4.39 8.41-9.2a1 1 0 1 1 1.48 1.34l-9.14 10a1 1 0 0 1-.73.33z"
                                  fill={
                                    {
                                      "payload": 4278190080,
                                      "type": 0,
                                    }
                                  }
                                />
                              </RNSVGGroup>
                            </RNSVGGroup>
                          </RNSVGGroup>
                        </RNSVGSvgView>
                      </View>
                      <Text
                        color="#FFFFFF"
                        isRTL={false}
                        selectable={true}
                        style={
                          {
                            "alignItems": "center",
                            "color": "#FFFFFF",
                            "fontFamily": "circularBold",
                            "fontSize": 16,
                            "lineHeight": 20,
                            "marginLeft": 8,
                            "marginRight": 0,
                            "textAlign": "left",
                          }
                        }
                      >
                        Valider
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
